--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,14 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 300;
-  src: url(../fonts/OpenSans-Light.ttf);
+  src: url(../fonts/OpenSans-Light.woff);
 }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/OpenSans-Regular.ttf);
+  src: url(../fonts/OpenSans-Regular.woff);
 }
 
 /* Global */
