--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 :root {
   --basic-black: #000000;
   --basic-black-10: rgba(0, 0, 0, 0.1);
+  --basic-black-15: rgba(0, 0, 0, 0.15);
+  --basic-black-18: rgba(0, 0, 0, 0.18);
   --basic-black-20: rgba(0, 0, 0, 0.2);
   --basic-black-30: rgba(0, 0, 0, 0.3);
   --basic-black-40: rgba(0, 0, 0, 0.4);
@@ -127,7 +129,17 @@ img {
   opacity: 0.3;
 }
 
+.basic-link_name {
+  display: inline-block;
+  margin-top: 4px;
+  vertical-align: top;
+  width: 130px;
+}
+
 .basic-link_signout {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 4px;
   margin-left: 17px;
   color: var(--basic-black-30);
 }
@@ -187,6 +199,14 @@ img {
 
 .basic-link_theme_dark.basic-link_icon_basket::before {
   background-image: url(../img/footer/cart.svg);
+}
+
+.basic-link_theme_dark.basic-link_name {
+  margin-top: 0;
+}
+
+.basic-link_theme_dark.basic-link_signout {
+  margin-top: 0;
 }
 
 .basic-title {
@@ -346,17 +366,17 @@ img {
 
 /* header */
 .header__wrapper {
-  background-color: var(--special-yellow-light);
-  padding-top: 40px;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(9.5%, transparent), color-stop(9.5%, var(--special-yellow-light)));
+  background-image: linear-gradient(to bottom, transparent 9.5%, var(--special-yellow-light) 9.5%);
   padding-bottom: 47px;
-  margin-top: 40px;
+  margin-top: 20px;
   position: relative;
 }
 
 .header__logo {
-  position: absolute;
-  top: -20px;
-  left: 60px;
+  display: block;
+  margin-bottom: 6px;
+  margin-left: 60px;
 }
 
 .header__logo:focus, .header__logo:hover {
@@ -385,17 +405,20 @@ img {
   height: 16px;
   width: 16px;
   position: absolute;
-  top: 7px;
+  top: 18px;
   left: 80px;
   background-image: url(../img/header/search.svg);
   background-repeat: no-repeat;
 }
 
 .header-search:focus-within .header-search__button {
-  display: block;
+  display: inline-block;
 }
 
 .header-search__input {
+  display: inline-block;
+  vertical-align: middle;
+  height: 50px;
   background: transparent;
   border: none;
   font-family: Open Sans, Arial, sans-serif;
@@ -417,14 +440,13 @@ img {
 }
 
 .header-search__input:focus + .header-search__button {
-  display: block;
+  display: inline-block;
 }
 
 .header-search__button {
   display: none;
-  position: absolute;
-  top: -12px;
-  right: 80px;
+  vertical-align: middle;
+  margin-left: 164px;
   background: transparent;
   font-family: Open Sans, Arial, sans-serif;
   font-weight: 300;
@@ -454,12 +476,13 @@ img {
   height: 2px;
   width: 440px;
   position: absolute;
-  bottom: -2px;
-  right: -2px;
+  top: 48px;
+  left: 81px;
   background-color: var(--basic-black);
 }
 
 .header-actions {
+  padding-top: 11px;
   margin-bottom: 43px;
 }
 
@@ -495,7 +518,7 @@ img {
 
 .header-nav__link_catalog {
   letter-spacing: 0.1em;
-  padding-left: 60px;
+  margin-left: 60px;
   position: relative;
 }
 
@@ -533,9 +556,9 @@ img {
   width: 100%;
   height: 161px;
   padding-top: 23px;
-  padding-left: 60px;
   padding-right: 143px;
   padding-bottom: 30px;
+  padding-left: 60px;
 }
 
 .header-catalog:focus, .header-catalog:hover {
@@ -556,19 +579,18 @@ img {
 /* slider */
 .slider {
   margin-top: -15px;
-  margin-bottom: 76px;
+  margin-bottom: 89px;
   position: relative;
   z-index: 1;
 }
 
 .slider__wrapper {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(24.9%, #F7E296), color-stop(24.9%, transparent));
-  background-image: linear-gradient(to bottom, #F7E296 24.9%, transparent 24.9%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(25.5%, var(--special-yellow-light)), color-stop(25.5%, transparent));
+  background-image: linear-gradient(to bottom, var(--special-yellow-light) 25.5%, transparent 25.5%);
 }
 
 .slider-item {
   display: none;
-  height: 517px;
 }
 
 .slider-item_active {
@@ -665,7 +687,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   position: absolute;
-  bottom: 158px;
+  bottom: 145px;
   right: 90px;
 }
 
@@ -780,8 +802,8 @@ img {
   min-height: 401px;
   position: relative;
   margin-bottom: 90px;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(28.1%, transparent), color-stop(28.1%, #E5E5E5));
-  background-image: linear-gradient(transparent 28.1%, #E5E5E5 28.1%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(28.1%, transparent), color-stop(28.1%, var(--basic-grey-lighten)));
+  background-image: linear-gradient(transparent 28.1%, var(--basic-grey-lighten) 28.1%);
 }
 
 .services__controls {
@@ -987,12 +1009,14 @@ img {
           transform: translate(-50%, -50%);
   width: 960px;
   height: 560px;
-  -webkit-box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 10px 16px var(--basic-black-15);
+          box-shadow: 0px 10px 16px var(--basic-black-15);
 }
 
 .map_active {
   display: block;
+  -webkit-animation: bounce 0.6s;
+          animation: bounce 0.6s;
 }
 
 .map__frame {
@@ -1027,8 +1051,11 @@ img {
 }
 
 /* footer */
-.footer {
+.footer-wrapper {
   background-color: var(--basic-dark);
+}
+
+.footer {
   color: var(--basic-white);
   line-height: 20px;
   position: relative;
@@ -1147,6 +1174,14 @@ img {
 
 .footer__copyright {
   text-align: right;
+}
+
+.footer__copyright:focus, .footer__copyright:hover {
+  opacity: 0.6;
+}
+
+.footer__copyright:active {
+  opacity: 0.3;
 }
 
 /* catalog */
@@ -1272,8 +1307,8 @@ img {
   background-color: var(--special-grey);
   border-radius: 50%;
   border: 8px solid #FFFFFF;
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.18);
-          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.18);
+  -webkit-box-shadow: 0px 2px 2px var(--basic-black-18);
+          box-shadow: 0px 2px 2px var(--basic-black-18);
   top: -9px;
 }
 
@@ -1384,8 +1419,8 @@ img {
 
 /* catalog */
 .sort-wrapper {
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #DCDCDC), color-stop(50%, #E5E5E5));
-  background: linear-gradient(to right, #DCDCDC 50%, #E5E5E5 50%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, var(--basic-quarter-grey)), color-stop(50%, var(--basic-grey-lighten)));
+  background: linear-gradient(to right, var(--basic-quarter-grey) 50%, var(--basic-grey-lighten) 50%);
 }
 
 .sort__filter {
@@ -1420,6 +1455,8 @@ img {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .sort__title {
@@ -1507,15 +1544,15 @@ img {
 }
 
 .сatalog-wrapper {
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #E5E5E5), color-stop(50%, #FFFFFF));
-  background: linear-gradient(to right, #E5E5E5 50%, #FFFFFF 50%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, var(--basic-grey-lighten)), color-stop(50%, var(--basic-white)));
+  background: linear-gradient(to right, var(--basic-grey-lighten) 50%, var(--basic-white) 50%);
 }
 
 .catalog {
   background-color: var(--basic-white);
   padding-left: 72px;
   padding-right: 20px;
-  padding-bottom: 78px;
+  padding-bottom: 77px;
   width: 71%;
 }
 
@@ -1666,8 +1703,7 @@ img {
   line-height: 20px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  border: none;
-  background-color: transparent;
+  color: var(--basic-black);
   padding-top: 25px;
   padding-left: 30px;
   padding-bottom: 25px;
@@ -1676,14 +1712,12 @@ img {
 
 .pages__button:focus, .pages__button:hover {
   background-color: var(--basic-grey-light);
-  cursor: pointer;
   outline: none;
 }
 
 .pages__button:active {
   color: var(--basic-black-30);
   background-color: var(--basic-grey-light);
-  cursor: pointer;
 }
 
 .pages__button_disabled:focus, .pages__button_disabled:hover, .pages__button_disabled:active {
@@ -1728,8 +1762,8 @@ img {
   width: 960px;
   min-height: 550px;
   background-color: var(--basic-white);
-  -webkit-box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 10px 16px var(--basic-black-15);
+          box-shadow: 0px 10px 16px var(--basic-black-15);
   padding-top: 92px;
   padding-left: 80px;
   padding-bottom: 69px;
@@ -1783,6 +1817,8 @@ img {
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
+  padding-top: 17px;
+  padding-bottom: 17px;
 }
 
 .modal__input::-webkit-input-placeholder {
@@ -1831,8 +1867,8 @@ img {
 .modal__input:focus {
   color: var(--basic-dark);
   outline: none;
-  -webkit-box-shadow: inset 2px 2px 0 #F7E296, inset -2px -2px 0 #F7E296, inset 2px -2px 0 #F7E296, inset -2px 2px 0 #F7E296;
-          box-shadow: inset 2px 2px 0 #F7E296, inset -2px -2px 0 #F7E296, inset 2px -2px 0 #F7E296, inset -2px 2px 0 #F7E296;
+  -webkit-box-shadow: inset 2px 2px 0 var(--special-yellow-light), inset -2px -2px 0 var(--special-yellow-light), inset 2px -2px 0 var(--special-yellow-light), inset -2px 2px 0 var(--special-yellow-light);
+          box-shadow: inset 2px 2px 0 var(--special-yellow-light), inset -2px -2px 0 var(--special-yellow-light), inset 2px -2px 0 var(--special-yellow-light), inset -2px 2px 0 var(--special-yellow-light);
   background-color: var(--basic-white);
 }
 
